@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- 
+<!--
 Yaaic - Yet Another Android IRC Client
 
 Copyright 2009-2012 Sebastian Kaspari
@@ -21,83 +21,97 @@ along with Yaaic.  If not, see <http://www.gnu.org/licenses/>.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.yaaic"
-    android:versionCode="11"
-    android:versionName="0.9"
-    android:installLocation="auto">
-    <uses-sdk android:minSdkVersion="4" android:targetSdkVersion="15" />
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
-    <uses-permission android:name="android.permission.VIBRATE"></uses-permission>
-    <uses-feature android:name="android.hardware.touchscreen" android:required="false"/>
+    android:installLocation="auto"
+    android:versionCode="12"
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:minSdkVersion="4"
+        android:targetSdkVersion="15" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <uses-feature
+        android:name="android.hardware.touchscreen"
+        android:required="false" />
+
     <application
         android:icon="@drawable/icon"
         android:label="Yaaic"
-        android:theme="@style/Theme.Yaaic">
+        android:theme="@style/Theme.Yaaic" >
         <activity
             android:name=".activity.ServersActivity"
             android:label="@string/app_name"
-            android:launchMode="standard">
+            android:launchMode="standard" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.AddServerActivity"
-            android:label="@string/add_server_label">
+            android:label="@string/add_server_label" >
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="irc"/>
+
+                <data android:scheme="irc" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.ConversationActivity"
-            android:windowSoftInputMode="adjustResize|stateHidden">
+            android:windowSoftInputMode="adjustResize|stateHidden" >
         </activity>
         <activity
             android:name=".activity.AboutActivity"
             android:label="@string/about_label"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".activity.SettingsActivity"
-            android:label="@string/settings_label">
+            android:label="@string/settings_label" >
         </activity>
         <activity
             android:name=".activity.JoinActivity"
             android:label="@string/join_label"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".activity.UsersActivity"
             android:label="@string/users"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".activity.AddAliasActivity"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".activity.AddChannelActivity"
-            android:theme="@android:style/Theme.Dialog">
-           </activity>
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
         <activity
             android:name=".activity.AddCommandsActivity"
-            android:theme="@android:style/Theme.Dialog">
-           </activity>
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
         <activity
             android:name=".activity.MessageActivity"
-            android:theme="@android:style/Theme.Dialog">
-           </activity>
+            android:theme="@android:style/Theme.Dialog" >
+        </activity>
         <activity
             android:name=".activity.UserActivity"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
         <activity
             android:name=".activity.AuthenticationActivity"
-            android:theme="@android:style/Theme.Dialog">
+            android:theme="@android:style/Theme.Dialog" >
         </activity>
-        <service android:name=".irc.IRCService"></service>
+
+        <service android:name=".irc.IRCService" >
+        </service>
     </application>
-</manifest> 
+
+</manifest>
