@@ -5,7 +5,7 @@
 
     <groupId>org.yaaic</groupId>
     <artifactId>yaaic</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>apk</packaging>
 
     <name>yaaic</name>
