@@ -2,7 +2,7 @@
 <resources>
     <string name="app_name">Yaaic</string>
     <string name="app_full_name">Yet Another Android IRC Client</string>
-    <string name="app_version">0.9</string>
+    <string name="app_version">1.0</string>
     <string name="app_homepage">http://www.yaaic.org</string>
     <string name="app_irc">irc://irc.epd-me.net/yaaic</string>
     <string name="app_copyright">(C) 2009-2012 Sebastian Kaspari</string>
