@@ -1,4 +1,15 @@
 --------------------------------------------------------------------------------
+Yaaic 1.0 - 2012-07-28
+--------------------------------------------------------------------------------
+ * New cleaned up UI using ActionBar and ViewPager.
+ * Yaaic can now be installed on SD cards.
+ * New Android emoticons.
+ * New command: /back - Turns off the away status (Francesco Lavra)
+ * Several bug fixes
+ * Updated translations - Help translating Yaaic online:
+   http://crowdin.net/project/yaaic
+
+--------------------------------------------------------------------------------
 Yaaic 0.9 - 2011-07-17 - 67 commits, 49 files changed, 7 authors
 --------------------------------------------------------------------------------
  * SASL support (pocmo)
